--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6ac6340e",
+   "id": "a242cef2",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "653a750e",
+   "id": "9210b31b",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4a70b85f90>"
+       "<IPython.lib.display.IFrame at 0x7fbec0931f30>"
       ]
      },
      "execution_count": 1,
