deploy: b2ca9f05bfea6a7a26931bbf7c4d07cfa62c9a26

--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "2ab0633e",
+   "id": "b8d15b32",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "c9a341b9",
+   "id": "931b29c2",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7fee384cdff0>"
+       "<IPython.lib.display.IFrame at 0x7f6a2886df30>"
       ]
      },
      "execution_count": 1,
