deploy: 61894d654d8901b581ad13c0eab77851df58a548

--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b8d15b32",
+   "id": "a39bfd35",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "931b29c2",
+   "id": "7d7d1fa5",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f6a2886df30>"
+       "<IPython.lib.display.IFrame at 0x7f1d8c0f9fc0>"
       ]
      },
      "execution_count": 1,
