--- a/_sources/content/Course_Overview.ipynb
+++ b/_sources/content/Course_Overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "42f2be66",
+   "id": "b7b7eba0",
    "metadata": {},
    "source": [
     "# Course Overview\n",
@@ -24,7 +24,15 @@
     "- How to install the data and programs needed for running interactive examples\n",
     "- Information for understanding and thinking about acquiring multi-echo fMRI\n",
     "- How multi-echo information can be used to support noise removal in data\n",
-    "- Examples and pipelines for processing and visualizing multi-echo data using multiple tools, such as AFNI, fMRIPrep and tedana."
+    "- Examples and pipelines for processing and visualizing multi-echo data using multiple tools, such as AFNI, fMRIPrep and tedana.\n",
+    "\n",
+    "A good place to ask additional questions about multi-echo fMRI and processing is at\n",
+    "[neurostars.org/](https://neurostars.org/) using the `multi-echo` or `tedana` tags.\n",
+    "\n",
+    "If you have ideas for future multi-echo fMRI methods or issues with the tedana code,\n",
+    "you can post issues at [github.com/ME-ICA/tedana/issues](https://github.com/ME-ICA/tedana/issues) or\n",
+    "start a discussion at [github.com/ME-ICA/tedana/discussions](https://github.com/ME-ICA/tedana/discussions).\n",
+    "You can also join [mattermost.brainhack.org/brainhack/channels/tedana](https://mattermost.brainhack.org/brainhack/channels/tedana) for additional discussions with tedana developers."
    ]
   }
  ],
