deploy: 1d4374bac99979ae1e74b61cd661730de1f1e0c3

--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "a39bfd35",
+   "id": "fa6e3b69",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7d7d1fa5",
+   "id": "bd525eb0",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f1d8c0f9fc0>"
+       "<IPython.lib.display.IFrame at 0x7f6fdc43aa10>"
       ]
      },
      "execution_count": 1,
