deploy: 668cc76923fb243c4012fba511cd8a3616338c6a

--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "4fe905fa",
+   "id": "25ade3aa",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "333e0341",
+   "id": "c7a65477",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f86ec629f60>"
+       "<IPython.lib.display.IFrame at 0x7f66d8f2df60>"
       ]
      },
      "execution_count": 1,
