deploy: d8d03eefa88c8d196ee92c4c7e68e209992e526b

--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e4fb2e04",
+   "id": "41c4b764",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "aea2ed76",
+   "id": "92492172",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f7a00229fc0>"
+       "<IPython.lib.display.IFrame at 0x7f8f60e49ff0>"
       ]
      },
      "execution_count": 1,
