deploy: 70220c091aa56bd70a4615915f86a175cab89290

--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "41c4b764",
+   "id": "724b0a4b",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "92492172",
+   "id": "85b88014",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8f60e49ff0>"
+       "<IPython.lib.display.IFrame at 0x7f5568d39fc0>"
       ]
      },
      "execution_count": 1,
