deploy: ed8981e691ce297ba6f1f394bef9f9d2476b650c

--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "01c3db57",
+   "id": "6cfec146",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "393b740c",
+   "id": "4f5dc596",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f5f84f41fc0>"
+       "<IPython.lib.display.IFrame at 0x7feb9837de70>"
       ]
      },
      "execution_count": 1,
