deploy: 81ec81be4b7b6f9ed47375fb2295f058a3627a12

--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6cfec146",
+   "id": "34b1bc86",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4f5dc596",
+   "id": "e1130827",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7feb9837de70>"
+       "<IPython.lib.display.IFrame at 0x7fa23c079f60>"
       ]
      },
      "execution_count": 1,
