deploy: 7ce195beb5dc39864598b519ca3d5c1e0eb0a445

--- a/_sources/content/Contributors.ipynb
+++ b/_sources/content/Contributors.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8971c8d3",
+   "id": "d10b17da",
    "metadata": {},
    "source": [
     "# Contributors\n",
@@ -11,12 +11,13 @@
     "designing the overall framework that builds into an html Jupyter book,\n",
     "and wrote a substantial portion of the text.\n",
     "\n",
-    "Daniel Handwerker ([@handwerkerd](https://github.com/handwerkerd)) led a project to expand and update this book at the [OHBM 2025 BrainHack](https://ohbm.github.io/hackathon2025). Additional contributors at the hackathon include\n",
+    "Daniel Handwerker ([@handwerkerd](https://github.com/handwerkerd)) led a project to expand and update this book at the [OHBM 2025 BrainHack](https://ohbm.github.io/hackathon2025).\n",
+    "Mélanie Garcia ([@garciaml](https://github.com/garciaml)) made many substantial contributions.\n",
     "\n",
-    "- Mélanie Garcia [@garciaml](https://github.com/garciaml)\n",
+    "Additional contributors at the hackathon include\n",
+    "\n",
     "- Merel van der Thiel [@merelvdthiel](https://github.com/merelvdthiel)\n",
-    "- Korbinian Eckstein [@korbinian90](https://github.com/korbinian90)\n",
-    "- Benjamin Ely [@elyb01](https://github.com/elyb01)"
+    "- Korbinian Eckstein [@korbinian90](https://github.com/korbinian90)"
    ]
   }
  ],
