--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "362cb283",
+   "id": "44682c7d",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "45d18e7b",
+   "id": "2fd8265c",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f9c4c625f90>"
+       "<IPython.lib.display.IFrame at 0x7f4a84d3a0b0>"
       ]
      },
      "execution_count": 1,
