--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "44682c7d",
+   "id": "0efbfcd0",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2fd8265c",
+   "id": "43313c35",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f4a84d3a0b0>"
+       "<IPython.lib.display.IFrame at 0x7f8ad0f45f60>"
       ]
      },
      "execution_count": 1,
