deploy: f4b7ed2009e30c8052d1f1d3fae940b19eb07255

--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0efbfcd0",
+   "id": "9e44b01f",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "43313c35",
+   "id": "4ef58cff",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f8ad0f45f60>"
+       "<IPython.lib.display.IFrame at 0x7faae0f2df30>"
       ]
      },
      "execution_count": 1,
