deploy: f23aafe92ea8c29cf611cdecb880c4b1f11400c4

--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9e44b01f",
+   "id": "0a9fde22",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4ef58cff",
+   "id": "1ae5bdce",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7faae0f2df30>"
+       "<IPython.lib.display.IFrame at 0x7f3c14722920>"
       ]
      },
      "execution_count": 1,
