deploy: 390470e89d6c3d8ea5a074c3d2367d5b56d5af96

--- a/_sources/content/07_Manual_Classification_with_rica.ipynb
+++ b/_sources/content/07_Manual_Classification_with_rica.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "0a9fde22",
+   "id": "8a9b2408",
    "metadata": {},
    "source": [
     "# Manual Classification with `rica`\n",
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "1ae5bdce",
+   "id": "df36335b",
    "metadata": {},
    "outputs": [
     {
@@ -33,7 +33,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x7f3c14722920>"
+       "<IPython.lib.display.IFrame at 0x7f69ac6b5ff0>"
       ]
      },
      "execution_count": 1,
