--- a/_sources/content/Acquiring_Multi_Echo_Data.ipynb
+++ b/_sources/content/Acquiring_Multi_Echo_Data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "7a0e1649",
+   "id": "316d05b3",
    "metadata": {},
    "source": [
     "# Acquiring Multi-Echo Data\n",
@@ -96,19 +96,18 @@
     "  The number of echoes can be specified on the **Sequence, Special** tab in this sequence.\n",
     "\n",
     "### GE\n",
+    " \n",
+    "GE users can request access to the HyperMEPI ATSM sequence.\n",
+    "Request can be made through [GE's WeConnect Portal](https://collaborate.mr.gehealthcare.com).\n",
+    "This sequence has both hyperband \n",
+    "(GE's term for simultaneous-multislice or multiband) and multi-echo.\n",
+    "Depending on scanner version,\n",
+    "GE scanners have a limit on the total number of slices that can be collected during a single acquisition.\n",
+    "When multi-echo is used with hyperband and a relatively short TR,\n",
+    "many slices can be collected in a relatively short time,\n",
+    "this limit can affect the total scan duration.\n",
     "\n",
-    "**For GE users**, there are currently two sharable pulse sequences:\n",
     "\n",
-    "- Multi-echo EPI (MEPI) – Software releases: DV24, MP24 and DV25 (with offline recon)\n",
-    "- Hyperband Multi-echo EPI (HyperMEPI) - Software releases: DV26, MP26, DV27, RX27\n",
-    "  (here hyperband can be deactivated to do simple Multi-echo EPI – online recon)\n",
-    "\n",
-    "Please reach out to the GE Research Operation team or each pulse sequence’s\n",
-    "author to begin the process of obtaining this software.\n",
-    "More information can be found on the [GE Collaboration Portal](https://collaborate.mr.gehealthcare.com).\n",
-    "\n",
-    "Once logged in, go to Groups > GE Works-in-Progress you can find the description\n",
-    "of the current ATSM (i.e. prototypes).\n",
     "\n",
     "### Philips\n",
     "\n",
@@ -219,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "66cea233",
+   "id": "1d0a2f2c",
    "metadata": {},
    "outputs": [
     {
@@ -337,7 +336,7 @@
   },
   "source_map": [
    12,
-   224
+   223
   ]
  },
  "nbformat": 4,
